[tool.poetry]
name = "dash-hw"
version = "0.1.0"
description = ""
authors = ["Nikolay Nekrasov <nnnekrasov@edu.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.15.0"
plotly = "^5.19.0"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
